// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deltas & Hashes Deltas Both empty: getMergeableRowIdsDiff t1 1`] = `
{
  "t1": [],
}
`;

exports[`Deltas & Hashes Deltas Both empty: getMergeableRowIdsDiff t2 1`] = `
{
  "t2": [],
}
`;

exports[`Deltas & Hashes Deltas Both empty: getMergeableTableIdsDiff 1`] = `[]`;

exports[`Deltas & Hashes Deltas Both empty: getMergeableTablesChanges t1 r1 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas Both empty: getMergeableTablesChanges t1 r2 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas Both empty: getMergeableValuesChanges 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas Both match: getMergeableRowIdsDiff t1 1`] = `
{
  "t1": [],
}
`;

exports[`Deltas & Hashes Deltas Both match: getMergeableRowIdsDiff t2 1`] = `
{
  "t2": [],
}
`;

exports[`Deltas & Hashes Deltas Both match: getMergeableTableIdsDiff 1`] = `[]`;

exports[`Deltas & Hashes Deltas Both match: getMergeableTablesChanges t1 r1 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas Both match: getMergeableTablesChanges t1 r2 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas Both match: getMergeableValuesChanges 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different cell: getMergeableRowIdsDiff t1 1`] = `
{
  "t1": [
    "r1",
  ],
}
`;

exports[`Deltas & Hashes Deltas No match different cell: getMergeableRowIdsDiff t2 1`] = `
{
  "t2": [],
}
`;

exports[`Deltas & Hashes Deltas No match different cell: getMergeableTableIdsDiff 1`] = `
[
  "t1",
]
`;

exports[`Deltas & Hashes Deltas No match different cell: getMergeableTablesChanges t1 r1 1`] = `
[
  "",
  {
    "t1": [
      "",
      {
        "r1": [
          "",
          {
            "c1": [
              "Hc2DO@000008DKS9",
              1,
            ],
          },
        ],
      },
    ],
  },
]
`;

exports[`Deltas & Hashes Deltas No match different cell: getMergeableTablesChanges t1 r2 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different cell: getMergeableValuesChanges 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different row: getMergeableRowIdsDiff t1 1`] = `
{
  "t1": [
    "r1",
  ],
}
`;

exports[`Deltas & Hashes Deltas No match different row: getMergeableRowIdsDiff t2 1`] = `
{
  "t2": [],
}
`;

exports[`Deltas & Hashes Deltas No match different row: getMergeableTableIdsDiff 1`] = `
[
  "t1",
]
`;

exports[`Deltas & Hashes Deltas No match different row: getMergeableTablesChanges t1 r1 1`] = `
[
  "",
  {
    "t1": [
      "",
      {
        "r1": [
          "",
          {
            "c1": [
              "Hc2DO@000008DKS9",
              1,
            ],
          },
        ],
      },
    ],
  },
]
`;

exports[`Deltas & Hashes Deltas No match different row: getMergeableTablesChanges t1 r2 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different row: getMergeableValuesChanges 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different table: getMergeableRowIdsDiff t1 1`] = `
{
  "t1": [
    "r1",
  ],
}
`;

exports[`Deltas & Hashes Deltas No match different table: getMergeableRowIdsDiff t2 1`] = `
{
  "t2": [],
}
`;

exports[`Deltas & Hashes Deltas No match different table: getMergeableTableIdsDiff 1`] = `
[
  "t1",
]
`;

exports[`Deltas & Hashes Deltas No match different table: getMergeableTablesChanges t1 r1 1`] = `
[
  "",
  {
    "t1": [
      "",
      {
        "r1": [
          "",
          {
            "c1": [
              "Hc2DO@000008DKS9",
              1,
            ],
            "c2": [
              "Hc2DO@000008DKS9",
              2,
            ],
          },
        ],
      },
    ],
  },
]
`;

exports[`Deltas & Hashes Deltas No match different table: getMergeableTablesChanges t1 r2 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different table: getMergeableValuesChanges 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different tables: getMergeableRowIdsDiff t1 1`] = `
{
  "t1": [
    "r1",
    "r2",
  ],
}
`;

exports[`Deltas & Hashes Deltas No match different tables: getMergeableRowIdsDiff t2 1`] = `
{
  "t2": [],
}
`;

exports[`Deltas & Hashes Deltas No match different tables: getMergeableTableIdsDiff 1`] = `
[
  "t1",
]
`;

exports[`Deltas & Hashes Deltas No match different tables: getMergeableTablesChanges t1 r1 1`] = `
[
  "",
  {
    "t1": [
      "",
      {
        "r1": [
          "",
          {
            "c1": [
              "Hc2DO@000008DKS9",
              1,
            ],
            "c2": [
              "Hc2DO@000008DKS9",
              2,
            ],
          },
        ],
      },
    ],
  },
]
`;

exports[`Deltas & Hashes Deltas No match different tables: getMergeableTablesChanges t1 r2 1`] = `
[
  "",
  {
    "t1": [
      "",
      {
        "r2": [
          "",
          {
            "c2": [
              "Hc2DO@000008DKS9",
              2,
            ],
          },
        ],
      },
    ],
  },
]
`;

exports[`Deltas & Hashes Deltas No match different tables: getMergeableValuesChanges 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different value: getMergeableRowIdsDiff t1 1`] = `
{
  "t1": [],
}
`;

exports[`Deltas & Hashes Deltas No match different value: getMergeableRowIdsDiff t2 1`] = `
{
  "t2": [],
}
`;

exports[`Deltas & Hashes Deltas No match different value: getMergeableTableIdsDiff 1`] = `[]`;

exports[`Deltas & Hashes Deltas No match different value: getMergeableTablesChanges t1 r1 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different value: getMergeableTablesChanges t1 r2 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different value: getMergeableValuesChanges 1`] = `
[
  "",
  {
    "v1": [
      "Hc2DO@000008DKS9",
      1,
    ],
  },
]
`;

exports[`Deltas & Hashes Deltas No match different values: getMergeableRowIdsDiff t1 1`] = `
{
  "t1": [],
}
`;

exports[`Deltas & Hashes Deltas No match different values: getMergeableRowIdsDiff t2 1`] = `
{
  "t2": [],
}
`;

exports[`Deltas & Hashes Deltas No match different values: getMergeableTableIdsDiff 1`] = `[]`;

exports[`Deltas & Hashes Deltas No match different values: getMergeableTablesChanges t1 r1 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different values: getMergeableTablesChanges t1 r2 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match different values: getMergeableValuesChanges 1`] = `
[
  "",
  {
    "v1": [
      "Hc2DO@000008DKS9",
      1,
    ],
  },
]
`;

exports[`Deltas & Hashes Deltas No match store1 empty: getMergeableRowIdsDiff t1 1`] = `
{
  "t1": [],
}
`;

exports[`Deltas & Hashes Deltas No match store1 empty: getMergeableRowIdsDiff t2 1`] = `
{
  "t2": [],
}
`;

exports[`Deltas & Hashes Deltas No match store1 empty: getMergeableTableIdsDiff 1`] = `[]`;

exports[`Deltas & Hashes Deltas No match store1 empty: getMergeableTablesChanges t1 r1 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 empty: getMergeableTablesChanges t1 r2 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 empty: getMergeableValuesChanges 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing cell: getMergeableRowIdsDiff t1 1`] = `
{
  "t1": [
    "r1",
  ],
}
`;

exports[`Deltas & Hashes Deltas No match store1 missing cell: getMergeableRowIdsDiff t2 1`] = `
{
  "t2": [],
}
`;

exports[`Deltas & Hashes Deltas No match store1 missing cell: getMergeableTableIdsDiff 1`] = `
[
  "t1",
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing cell: getMergeableTablesChanges t1 r1 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing cell: getMergeableTablesChanges t1 r2 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing cell: getMergeableValuesChanges 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing row: getMergeableRowIdsDiff t1 1`] = `
{
  "t1": [],
}
`;

exports[`Deltas & Hashes Deltas No match store1 missing row: getMergeableRowIdsDiff t2 1`] = `
{
  "t2": [],
}
`;

exports[`Deltas & Hashes Deltas No match store1 missing row: getMergeableTableIdsDiff 1`] = `
[
  "t1",
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing row: getMergeableTablesChanges t1 r1 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing row: getMergeableTablesChanges t1 r2 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing row: getMergeableValuesChanges 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing table: getMergeableRowIdsDiff t1 1`] = `
{
  "t1": [],
}
`;

exports[`Deltas & Hashes Deltas No match store1 missing table: getMergeableRowIdsDiff t2 1`] = `
{
  "t2": [],
}
`;

exports[`Deltas & Hashes Deltas No match store1 missing table: getMergeableTableIdsDiff 1`] = `[]`;

exports[`Deltas & Hashes Deltas No match store1 missing table: getMergeableTablesChanges t1 r1 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing table: getMergeableTablesChanges t1 r2 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing table: getMergeableValuesChanges 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing tables: getMergeableRowIdsDiff t1 1`] = `
{
  "t1": [],
}
`;

exports[`Deltas & Hashes Deltas No match store1 missing tables: getMergeableRowIdsDiff t2 1`] = `
{
  "t2": [],
}
`;

exports[`Deltas & Hashes Deltas No match store1 missing tables: getMergeableTableIdsDiff 1`] = `[]`;

exports[`Deltas & Hashes Deltas No match store1 missing tables: getMergeableTablesChanges t1 r1 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing tables: getMergeableTablesChanges t1 r2 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing tables: getMergeableValuesChanges 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing value: getMergeableRowIdsDiff t1 1`] = `
{
  "t1": [],
}
`;

exports[`Deltas & Hashes Deltas No match store1 missing value: getMergeableRowIdsDiff t2 1`] = `
{
  "t2": [],
}
`;

exports[`Deltas & Hashes Deltas No match store1 missing value: getMergeableTableIdsDiff 1`] = `[]`;

exports[`Deltas & Hashes Deltas No match store1 missing value: getMergeableTablesChanges t1 r1 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing value: getMergeableTablesChanges t1 r2 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing value: getMergeableValuesChanges 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing values: getMergeableRowIdsDiff t1 1`] = `
{
  "t1": [],
}
`;

exports[`Deltas & Hashes Deltas No match store1 missing values: getMergeableRowIdsDiff t2 1`] = `
{
  "t2": [],
}
`;

exports[`Deltas & Hashes Deltas No match store1 missing values: getMergeableTableIdsDiff 1`] = `[]`;

exports[`Deltas & Hashes Deltas No match store1 missing values: getMergeableTablesChanges t1 r1 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing values: getMergeableTablesChanges t1 r2 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store1 missing values: getMergeableValuesChanges 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 empty: getMergeableRowIdsDiff t1 1`] = `
{
  "t1": [
    "r1",
    "r2",
  ],
}
`;

exports[`Deltas & Hashes Deltas No match store2 empty: getMergeableRowIdsDiff t2 1`] = `
{
  "t2": [
    "r2",
  ],
}
`;

exports[`Deltas & Hashes Deltas No match store2 empty: getMergeableTableIdsDiff 1`] = `
[
  "t1",
  "t2",
]
`;

exports[`Deltas & Hashes Deltas No match store2 empty: getMergeableTablesChanges t1 r1 1`] = `
[
  "",
  {
    "t1": [
      "",
      {
        "r1": [
          "",
          {
            "c1": [
              "Hc2DO@000008DKS9",
              1,
            ],
            "c2": [
              "Hc2DO@000008DKS9",
              2,
            ],
          },
        ],
      },
    ],
  },
]
`;

exports[`Deltas & Hashes Deltas No match store2 empty: getMergeableTablesChanges t1 r2 1`] = `
[
  "",
  {
    "t1": [
      "",
      {
        "r2": [
          "",
          {
            "c2": [
              "Hc2DO@000008DKS9",
              2,
            ],
          },
        ],
      },
    ],
  },
]
`;

exports[`Deltas & Hashes Deltas No match store2 empty: getMergeableValuesChanges 1`] = `
[
  "",
  {
    "v1": [
      "Hc2DO@000008DKS9",
      1,
    ],
    "v2": [
      "Hc2DO@000008DKS9",
      2,
    ],
  },
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing cell: getMergeableRowIdsDiff t1 1`] = `
{
  "t1": [
    "r1",
  ],
}
`;

exports[`Deltas & Hashes Deltas No match store2 missing cell: getMergeableRowIdsDiff t2 1`] = `
{
  "t2": [],
}
`;

exports[`Deltas & Hashes Deltas No match store2 missing cell: getMergeableTableIdsDiff 1`] = `
[
  "t1",
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing cell: getMergeableTablesChanges t1 r1 1`] = `
[
  "",
  {
    "t1": [
      "",
      {
        "r1": [
          "",
          {
            "c2": [
              "Hc2DO@000018DKS9",
              2,
            ],
          },
        ],
      },
    ],
  },
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing cell: getMergeableTablesChanges t1 r2 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing cell: getMergeableValuesChanges 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing row: getMergeableRowIdsDiff t1 1`] = `
{
  "t1": [
    "r2",
  ],
}
`;

exports[`Deltas & Hashes Deltas No match store2 missing row: getMergeableRowIdsDiff t2 1`] = `
{
  "t2": [],
}
`;

exports[`Deltas & Hashes Deltas No match store2 missing row: getMergeableTableIdsDiff 1`] = `
[
  "t1",
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing row: getMergeableTablesChanges t1 r1 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing row: getMergeableTablesChanges t1 r2 1`] = `
[
  "",
  {
    "t1": [
      "",
      {
        "r2": [
          "",
          {
            "c2": [
              "Hc2DO@000018DKS9",
              2,
            ],
          },
        ],
      },
    ],
  },
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing row: getMergeableValuesChanges 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing table: getMergeableRowIdsDiff t1 1`] = `
{
  "t1": [],
}
`;

exports[`Deltas & Hashes Deltas No match store2 missing table: getMergeableRowIdsDiff t2 1`] = `
{
  "t2": [
    "r2",
  ],
}
`;

exports[`Deltas & Hashes Deltas No match store2 missing table: getMergeableTableIdsDiff 1`] = `
[
  "t2",
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing table: getMergeableTablesChanges t1 r1 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing table: getMergeableTablesChanges t1 r2 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing table: getMergeableValuesChanges 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing tables: getMergeableRowIdsDiff t1 1`] = `
{
  "t1": [
    "r1",
    "r2",
  ],
}
`;

exports[`Deltas & Hashes Deltas No match store2 missing tables: getMergeableRowIdsDiff t2 1`] = `
{
  "t2": [
    "r2",
  ],
}
`;

exports[`Deltas & Hashes Deltas No match store2 missing tables: getMergeableTableIdsDiff 1`] = `
[
  "t1",
  "t2",
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing tables: getMergeableTablesChanges t1 r1 1`] = `
[
  "",
  {
    "t1": [
      "",
      {
        "r1": [
          "",
          {
            "c1": [
              "Hc2DO@000008DKS9",
              1,
            ],
            "c2": [
              "Hc2DO@000008DKS9",
              2,
            ],
          },
        ],
      },
    ],
  },
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing tables: getMergeableTablesChanges t1 r2 1`] = `
[
  "",
  {
    "t1": [
      "",
      {
        "r2": [
          "",
          {
            "c2": [
              "Hc2DO@000008DKS9",
              2,
            ],
          },
        ],
      },
    ],
  },
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing tables: getMergeableValuesChanges 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing value: getMergeableRowIdsDiff t1 1`] = `
{
  "t1": [],
}
`;

exports[`Deltas & Hashes Deltas No match store2 missing value: getMergeableRowIdsDiff t2 1`] = `
{
  "t2": [],
}
`;

exports[`Deltas & Hashes Deltas No match store2 missing value: getMergeableTableIdsDiff 1`] = `[]`;

exports[`Deltas & Hashes Deltas No match store2 missing value: getMergeableTablesChanges t1 r1 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing value: getMergeableTablesChanges t1 r2 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing value: getMergeableValuesChanges 1`] = `
[
  "",
  {
    "v2": [
      "Hc2DO@000018DKS9",
      2,
    ],
  },
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing values: getMergeableRowIdsDiff t1 1`] = `
{
  "t1": [],
}
`;

exports[`Deltas & Hashes Deltas No match store2 missing values: getMergeableRowIdsDiff t2 1`] = `
{
  "t2": [],
}
`;

exports[`Deltas & Hashes Deltas No match store2 missing values: getMergeableTableIdsDiff 1`] = `[]`;

exports[`Deltas & Hashes Deltas No match store2 missing values: getMergeableTablesChanges t1 r1 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing values: getMergeableTablesChanges t1 r2 1`] = `
[
  "",
  {},
]
`;

exports[`Deltas & Hashes Deltas No match store2 missing values: getMergeableValuesChanges 1`] = `
[
  "",
  {
    "v1": [
      "Hc2DO@000008DKS9",
      1,
    ],
    "v2": [
      "Hc2DO@000008DKS9",
      2,
    ],
  },
]
`;

exports[`Deltas & Hashes getMergeableCellHashes Empty 1`] = `
{
  "t1": {
    "r1": {},
  },
}
`;

exports[`Deltas & Hashes getMergeableCellHashes Non-empty 1`] = `
{
  "t1": {
    "r1": {
      "c1": 4065945599,
      "c2": 903550280,
    },
  },
}
`;

exports[`Deltas & Hashes getMergeableContentHashes Empty 1`] = `
[
  "",
  [
    0,
    0,
  ],
]
`;

exports[`Deltas & Hashes getMergeableContentHashes Non-empty 1`] = `
[
  "",
  [
    988302986,
    3309870898,
  ],
]
`;

exports[`Deltas & Hashes getMergeableRowHashes Empty 1`] = `
{
  "t1": {},
}
`;

exports[`Deltas & Hashes getMergeableRowHashes Non-empty 1`] = `
{
  "t1": {
    "r1": 3090025824,
    "r2": 2068384606,
  },
}
`;

exports[`Deltas & Hashes getMergeableTableHashes Empty 1`] = `{}`;

exports[`Deltas & Hashes getMergeableTableHashes Non-empty 1`] = `
{
  "t1": 2570981451,
  "t2": 635725630,
}
`;

exports[`Deltas & Hashes getMergeableValuesHashes Empty 1`] = `{}`;

exports[`Deltas & Hashes getMergeableValuesHashes Non-empty 1`] = `
{
  "v1": 4065945599,
  "v2": 903550280,
}
`;

exports[`Merge Nothing 1`] = `
[
  "",
  [
    [
      "",
      {},
      0,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Merge Nothing 2`] = `
[
  "",
  [
    [
      "",
      {},
      0,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Merge One way delCell 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                  3207404266,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  undefined,
                  1517672885,
                ],
              },
              90271768,
            ],
            "r2": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
              },
              115816801,
            ],
          },
          4167093002,
        ],
        "t2": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
              },
              115816801,
            ],
          },
          4293955837,
        ],
      },
      238240702,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  238240702,
]
`;

exports[`Merge One way delRow 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                  3207404266,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  undefined,
                  1517672885,
                ],
              },
              90271768,
            ],
            "r2": [
              "",
              {
                "c1": [
                  "Hc2DO@000038DKS9",
                  undefined,
                  4228156312,
                ],
              },
              3414392220,
            ],
          },
          2190743891,
        ],
        "t2": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
              },
              115816801,
            ],
          },
          4293955837,
        ],
      },
      1295459070,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  1295459070,
]
`;

exports[`Merge One way delTable 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                  3207404266,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  undefined,
                  1517672885,
                ],
              },
              90271768,
            ],
            "r2": [
              "",
              {
                "c1": [
                  "Hc2DO@000038DKS9",
                  undefined,
                  4228156312,
                ],
              },
              3414392220,
            ],
          },
          2190743891,
        ],
        "t2": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000048DKS9",
                  undefined,
                  2289969851,
                ],
              },
              1628978585,
            ],
          },
          2168095463,
        ],
      },
      2433215523,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  2433215523,
]
`;

exports[`Merge One way delTables 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000068DKS9",
                  undefined,
                  1646436633,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  undefined,
                  1517672885,
                ],
              },
              526436484,
            ],
            "r2": [
              "",
              {
                "c1": [
                  "Hc2DO@000038DKS9",
                  undefined,
                  4228156312,
                ],
              },
              3414392220,
            ],
          },
          1525431343,
        ],
        "t2": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000048DKS9",
                  undefined,
                  2289969851,
                ],
              },
              1628978585,
            ],
            "r2": [
              "",
              {
                "c2": [
                  "Hc2DO@000068DKS9",
                  undefined,
                  1646436633,
                ],
              },
              2993345838,
            ],
          },
          2904304634,
        ],
      },
      4105176891,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4105176891,
]
`;

exports[`Merge One way delValue 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000068DKS9",
                  undefined,
                  1646436633,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  undefined,
                  1517672885,
                ],
              },
              526436484,
            ],
            "r2": [
              "",
              {
                "c1": [
                  "Hc2DO@000038DKS9",
                  undefined,
                  4228156312,
                ],
              },
              3414392220,
            ],
          },
          1525431343,
        ],
        "t2": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000048DKS9",
                  undefined,
                  2289969851,
                ],
              },
              1628978585,
            ],
            "r2": [
              "",
              {
                "c2": [
                  "Hc2DO@000068DKS9",
                  undefined,
                  1646436633,
                ],
              },
              2993345838,
            ],
          },
          2904304634,
        ],
      },
      4105176891,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000088DKS9",
          1,
          1209068807,
        ],
        "v2": [
          "Hc2DO@000098DKS9",
          undefined,
          1159821978,
        ],
      },
      2393416798,
    ],
  ],
  2048435045,
]
`;

exports[`Merge One way delValues 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000068DKS9",
                  undefined,
                  1646436633,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  undefined,
                  1517672885,
                ],
              },
              526436484,
            ],
            "r2": [
              "",
              {
                "c1": [
                  "Hc2DO@000038DKS9",
                  undefined,
                  4228156312,
                ],
              },
              3414392220,
            ],
          },
          1525431343,
        ],
        "t2": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000048DKS9",
                  undefined,
                  2289969851,
                ],
              },
              1628978585,
            ],
            "r2": [
              "",
              {
                "c2": [
                  "Hc2DO@000068DKS9",
                  undefined,
                  1646436633,
                ],
              },
              2993345838,
            ],
          },
          2904304634,
        ],
      },
      4105176891,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@0000:8DKS9",
          undefined,
          4067122285,
        ],
        "v2": [
          "Hc2DO@000098DKS9",
          undefined,
          1159821978,
        ],
      },
      3959425906,
    ],
  ],
  414190665,
]
`;

exports[`Merge One way setCell 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                  3207404266,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
              },
              3517767035,
            ],
            "r2": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
              },
              115816801,
            ],
          },
          2053381492,
        ],
        "t2": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
              },
              115816801,
            ],
          },
          4293955837,
        ],
      },
      2603045523,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  2603045523,
]
`;

exports[`Merge One way setCell 2 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                  3207404266,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  undefined,
                  1517672885,
                ],
              },
              90271768,
            ],
            "r2": [
              "",
              {
                "c1": [
                  "Hc2DO@000038DKS9",
                  undefined,
                  4228156312,
                ],
              },
              3414392220,
            ],
          },
          2190743891,
        ],
        "t2": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000048DKS9",
                  undefined,
                  2289969851,
                ],
              },
              1628978585,
            ],
            "r2": [
              "",
              {
                "c2": [
                  "Hc2DO@000058DKS9",
                  2,
                  2818632457,
                ],
              },
              363182914,
            ],
          },
          341574579,
        ],
      },
      223508698,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  223508698,
]
`;

exports[`Merge One way setTables 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
              },
              140256738,
            ],
            "r2": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
              },
              115816801,
            ],
          },
          2316497968,
        ],
        "t2": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
              },
              115816801,
            ],
          },
          4293955837,
        ],
      },
      2083176685,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  2083176685,
]
`;

exports[`Merge One way setValue 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000068DKS9",
                  undefined,
                  1646436633,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  undefined,
                  1517672885,
                ],
              },
              526436484,
            ],
            "r2": [
              "",
              {
                "c1": [
                  "Hc2DO@000038DKS9",
                  undefined,
                  4228156312,
                ],
              },
              3414392220,
            ],
          },
          1525431343,
        ],
        "t2": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000048DKS9",
                  undefined,
                  2289969851,
                ],
              },
              1628978585,
            ],
            "r2": [
              "",
              {
                "c2": [
                  "Hc2DO@000068DKS9",
                  undefined,
                  1646436633,
                ],
              },
              2993345838,
            ],
          },
          2904304634,
        ],
      },
      4105176891,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000088DKS9",
          1,
          1209068807,
        ],
        "v2": [
          "Hc2DO@000078DKS9",
          0,
          1524959021,
        ],
      },
      3354147827,
    ],
  ],
  861682888,
]
`;

exports[`Merge One way setValues 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000068DKS9",
                  undefined,
                  1646436633,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  undefined,
                  1517672885,
                ],
              },
              526436484,
            ],
            "r2": [
              "",
              {
                "c1": [
                  "Hc2DO@000038DKS9",
                  undefined,
                  4228156312,
                ],
              },
              3414392220,
            ],
          },
          1525431343,
        ],
        "t2": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000048DKS9",
                  undefined,
                  2289969851,
                ],
              },
              1628978585,
            ],
            "r2": [
              "",
              {
                "c2": [
                  "Hc2DO@000068DKS9",
                  undefined,
                  1646436633,
                ],
              },
              2993345838,
            ],
          },
          2904304634,
        ],
      },
      4105176891,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000078DKS9",
          0,
          1524959021,
        ],
        "v2": [
          "Hc2DO@000078DKS9",
          0,
          1524959021,
        ],
      },
      34049206,
    ],
  ],
  4139223949,
]
`;

exports[`Merge Two way Causality 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000025DK@@",
                  2,
                  3667222557,
                ],
              },
              953672745,
            ],
          },
          3602741010,
        ],
      },
      1834808984,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000035DK@@",
          2,
          2861658760,
        ],
      },
      1777490301,
    ],
  ],
  78557157,
]
`;

exports[`Merge Two way Causality 2`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000048DKS9",
                  3,
                  2480417845,
                ],
              },
              4137739263,
            ],
          },
          1563206141,
        ],
      },
      363199193,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000058DKS9",
          3,
          895933976,
        ],
      },
      2705602071,
    ],
  ],
  3034696910,
]
`;

exports[`Merge Two way Conflict 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              3278308926,
            ],
          },
          608074644,
        ],
      },
      3689956797,
    ],
    [
      "",
      {
        "v0": [
          "Hc2DO@000018DKS9",
          0,
          1811946515,
        ],
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      707780593,
    ],
  ],
  4057963084,
]
`;

exports[`Merge Two way Conflict 2`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@100005DK@@",
                  2,
                  2804922642,
                ],
              },
              58371857,
            ],
          },
          3714204384,
        ],
      },
      3444509272,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@100015DK@@",
          2,
          2724740231,
        ],
      },
      3742178356,
    ],
  ],
  306321004,
]
`;

exports[`Merge Two way Conflict 3`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@100005DK@@",
                  2,
                  2804922642,
                ],
              },
              58371857,
            ],
          },
          3714204384,
        ],
      },
      3444509272,
    ],
    [
      "",
      {
        "v0": [
          "Hc2DO@000018DKS9",
          0,
          1811946515,
        ],
        "v1": [
          "Hc2DO@100015DK@@",
          2,
          2724740231,
        ],
      },
      4021524955,
    ],
  ],
  586978179,
]
`;

exports[`Merge Two way Interleaving 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@200008DKS9",
                  undefined,
                  570947733,
                ],
              },
              1656872049,
            ],
          },
          974221882,
        ],
      },
      2242120835,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  2242120835,
]
`;

exports[`Merge Two way Interleaving 2`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c2": [
                  "Hc2DO@100005DK@@",
                  2,
                  2804922642,
                ],
              },
              3853242083,
            ],
          },
          2330221960,
        ],
      },
      810253148,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  810253148,
]
`;

exports[`Merge Two way Mutually exclusive tables & values 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              3278308926,
            ],
          },
          608074644,
        ],
      },
      3689956797,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      445733406,
    ],
  ],
  3244367779,
]
`;

exports[`Merge Two way Mutually exclusive tables & values 2`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c2": [
                  "Hc2DO@100005DK@@",
                  2,
                  2804922642,
                ],
              },
              3853242083,
            ],
            "r2": [
              "",
              {
                "c2": [
                  "Hc2DO@100005DK@@",
                  2,
                  2804922642,
                ],
              },
              3853242083,
            ],
          },
          4164031615,
        ],
        "t2": [
          "",
          {
            "r2": [
              "",
              {
                "c2": [
                  "Hc2DO@100005DK@@",
                  2,
                  2804922642,
                ],
              },
              3853242083,
            ],
          },
          1926646263,
        ],
      },
      2139698757,
    ],
    [
      "",
      {
        "v2": [
          "Hc2DO@100015DK@@",
          2,
          2724740231,
        ],
      },
      2041201258,
    ],
  ],
  102986799,
]
`;

exports[`Merge Two way Mutually exclusive tables & values 3`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@100005DK@@",
                  2,
                  2804922642,
                ],
              },
              650954973,
            ],
            "r2": [
              "",
              {
                "c2": [
                  "Hc2DO@100005DK@@",
                  2,
                  2804922642,
                ],
              },
              3853242083,
            ],
          },
          363095413,
        ],
        "t2": [
          "",
          {
            "r2": [
              "",
              {
                "c2": [
                  "Hc2DO@100005DK@@",
                  2,
                  2804922642,
                ],
              },
              3853242083,
            ],
          },
          1926646263,
        ],
      },
      4232740232,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
        "v2": [
          "Hc2DO@100015DK@@",
          2,
          2724740231,
        ],
      },
      1664817268,
    ],
  ],
  2675009020,
]
`;

exports[`Merge Two way Mutually exclusive tables vs values 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
              },
              115816801,
            ],
          },
          4293955837,
        ],
      },
      2577270131,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  2577270131,
]
`;

exports[`Merge Two way Mutually exclusive tables vs values 2`] = `
[
  "",
  [
    [
      "",
      {},
      0,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@100005DK@@",
          0,
          3183766124,
        ],
      },
      3867775115,
    ],
  ],
  3867775115,
]
`;

exports[`Merge Two way Mutually exclusive tables vs values 3`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
              },
              115816801,
            ],
          },
          4293955837,
        ],
      },
      2577270131,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@100005DK@@",
          0,
          3183766124,
        ],
      },
      3867775115,
    ],
  ],
  2132252152,
]
`;

exports[`apply/setMergeableContent apply into empty store 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`apply/setMergeableContent apply over existing content 1`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000018DKS9",
      {
        "t1": [
          "Hc2DO@000018DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c0": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                  3207404266,
                ],
              },
              192970134,
            ],
          },
          4186037739,
        ],
      },
      3007071579,
    ],
    [
      "Hc2DO@000018DKS9",
      {
        "v0": [
          "Hc2DO@000008DKS9",
          0,
          2614692414,
        ],
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      505723254,
    ],
  ],
  2904095789,
]
`;

exports[`apply/setMergeableContent set into empty store 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`apply/setMergeableContent set over existing content 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                  3207404266,
                ],
              },
              1254797189,
            ],
          },
          423436526,
        ],
      },
      639574078,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      2404136035,
    ],
  ],
  2840794205,
]
`;

exports[`apply/setMergeableContent set over existing content 2`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                  3207404266,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1838713043,
            ],
          },
          4090308283,
        ],
      },
      4221094888,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      2404136035,
    ],
  ],
  1960116107,
]
`;

exports[`apply/setMergeableContent set with wrong hashes 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                  1,
                ],
              },
              2,
            ],
          },
          3,
        ],
      },
      4,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          5,
        ],
      },
      6,
    ],
  ],
  7,
]
`;

exports[`getMergeableContent Empty transaction 1`] = `
[
  "",
  [
    [
      "",
      {},
      0,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`getMergeableContent Initialize 1`] = `
[
  "",
  [
    [
      "",
      {},
      0,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`getMergeableContent Mutate 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                  3207404266,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  undefined,
                  1517672885,
                ],
              },
              90271768,
            ],
            "r2": [
              "",
              {
                "c1": [
                  "Hc2DO@000038DKS9",
                  undefined,
                  4228156312,
                ],
              },
              3414392220,
            ],
          },
          2190743891,
        ],
        "t2": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000048DKS9",
                  undefined,
                  2289969851,
                ],
              },
              1628978585,
            ],
          },
          2168095463,
        ],
      },
      2433215523,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000058DKS9",
          5,
          3265694938,
        ],
        "v2": [
          "Hc2DO@000068DKS9",
          undefined,
          1646436633,
        ],
      },
      2723572765,
    ],
  ],
  860979262,
]
`;

exports[`getMergeableContent Set in sequence 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
                "c2": [
                  "Hc2DO@000018DKS9",
                  1,
                  3207404266,
                ],
              },
              1851134271,
            ],
            "r2": [
              "",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1951063224,
            ],
          },
          688021747,
        ],
        "t2": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000038DKS9",
                  3,
                  4033202406,
                ],
              },
              645465578,
            ],
          },
          2126674952,
        ],
      },
      3758433300,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000048DKS9",
          4,
          4189032886,
        ],
        "v2": [
          "Hc2DO@000058DKS9",
          5,
          3265694938,
        ],
      },
      3492436178,
    ],
  ],
  808418502,
]
`;

exports[`getMergeableContent Set together 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              3639814281,
            ],
            "r2": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              3444269370,
            ],
          },
          871305296,
        ],
        "t2": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  3,
                  2609181593,
                ],
              },
              2761716482,
            ],
          },
          1127151112,
        ],
      },
      3703633338,
    ],
    [
      "",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          4,
          4060269138,
        ],
        "v2": [
          "Hc2DO@000008DKS9",
          5,
          2123438739,
        ],
      },
      317280319,
    ],
  ],
  3458835845,
]
`;

exports[`getTransactionMergeableChanges After net noop transaction 1`] = `
[
  "",
  [
    [
      "",
      {},
    ],
    [
      "",
      {},
    ],
    1,
  ],
]
`;

exports[`getTransactionMergeableChanges After transaction 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "",
      {},
    ],
    1,
  ],
]
`;

exports[`getTransactionMergeableChanges After two transactions 1`] = `
[
  "",
  [
    [
      "",
      {
        "t0": [
          "",
          {
            "r0": [
              "",
              {
                "c0": [
                  "Hc2DO@000008DKS9",
                  0,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "",
      {},
    ],
    1,
  ],
]
`;

exports[`getTransactionMergeableChanges After two transactions 2`] = `
[
  "",
  [
    [
      "",
      {
        "t0": [
          "",
          {
            "r0": [
              "",
              {
                "c0": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
              },
              1095422483,
            ],
          },
          221351349,
        ],
      },
      1403776291,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  1403776291,
]
`;

exports[`getTransactionMergeableChanges After two transactions 3`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "",
      {},
    ],
    1,
  ],
]
`;

exports[`getTransactionMergeableChanges After two transactions 4`] = `
[
  "",
  [
    [
      "",
      {
        "t0": [
          "",
          {
            "r0": [
              "",
              {
                "c0": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
              },
              1095422483,
            ],
          },
          221351349,
        ],
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                  3207404266,
                ],
              },
              3742876152,
            ],
          },
          2422641961,
        ],
      },
      2794407532,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  2794407532,
]
`;

exports[`getTransactionMergeableChanges During and after transaction 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "",
      {},
    ],
    1,
  ],
]
`;

exports[`getTransactionMergeableChanges During and after transaction 2`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "",
      {},
    ],
    1,
  ],
]
`;

exports[`getTransactionMergeableChanges Inside net noop transaction 1`] = `
[
  "",
  [
    [
      "",
      {
        "t1": [
          "",
          {
            "r1": [
              "",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "",
      {},
    ],
    1,
  ],
]
`;

exports[`getTransactionMergeableChanges Inside net noop transaction 2`] = `
[
  "",
  [
    [
      "",
      {},
    ],
    [
      "",
      {},
    ],
    1,
  ],
]
`;

exports[`getTransactionMergeableChanges Inside noop transaction 1`] = `
[
  "",
  [
    [
      "",
      {},
    ],
    [
      "",
      {},
    ],
    1,
  ],
]
`;

exports[`getTransactionMergeableChanges Outside transaction 1`] = `
[
  "",
  [
    [
      "",
      {},
    ],
    [
      "",
      {},
    ],
    1,
  ],
]
`;
